tests/suite/snapshots/suite__check__tests__check__bad-assign1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-assign1.xi:2:9]
   │
 2 │     x = false
   ·         ──┬──  
   ·           ╰──── Expected int but found bool
───╯

